social icon correction and header alignment

--- a/arxer/site_media/static/verbena/css/about.css
+++ b/arxer/site_media/static/verbena/css/about.css
@@ -5,7 +5,7 @@
 header#backBanner {
 	margin: 0 auto;
 	background: #797D17;
-	height: 120px;
+	height: 92px;
 	padding: 5px;
 }
 
