--- a/arxer/site_media/static/verbena/css/action.css
+++ b/arxer/site_media/static/verbena/css/action.css
@@ -4,7 +4,7 @@
 
 header#backBanner {
 	margin: 0 auto;
-	height: 120px;
+	height: 92px;
 	padding: 5px;
 }
 
