--- a/arxer/site_media/static/verbena/css/index.css
+++ b/arxer/site_media/static/verbena/css/index.css
@@ -4,7 +4,7 @@
 
 header#backBanner {
 	margin: 0 auto;
-	height: 113px;
+	height: 92px;
 	padding: 5px;
 	background: #797D17;
 }
